fixed overflow bug with position sticky

--- a/static/portal/css/base.css
+++ b/static/portal/css/base.css
@@ -15,11 +15,11 @@ body {
     margin: 0;
     padding: 0;
     font-size: 1rem;
-    width: 100%;
     font-family: sans-serif;
     height: 100%;
     background-image: url('../images/background.png');
     background-size: 100vw auto;
+    overflow-x: hidden;
 }
 
 body {
